--- a/main/templates/profile.html
+++ b/main/templates/profile.html
@@ -11,21 +11,55 @@
 {% endblock %}
 
 {% block body %}
-  <main>
-    <div class="page-container">
-      <div class="arrow-wrapper">
-        <button class="arrow left-arrow">
-          <img src="/static/img/button-left.png" alt="Left Arrow">
-        </button>
-        <div class="content">
-          <!-- Здесь будет основной контент -->
-          <p>Основной блок с текстом, изображениями и другими элементами.</p>
+<main>
+  <!-- Левая стрелка -->
+  <button class="arrow left-arrow">
+    <img src="{% static 'img/button-left.png' %}" alt="Left Arrow">
+  </button>
+
+  <!-- Блок 1 -->
+  <div class="page-container block active">
+    <div class="profile-content">
+      <div class="phone-img">
+        <img src="{% static 'img/BlockPhonewithmap.png' %}" alt="Map Image">
+      </div>
+      <div class="main-content">
+        <h2>QUESTS</h2>
+        <h1>Quests around the world!</h1>
+        <p>Lorem Ipsum has been the industry's<br>standard dummy text ever since the 1500s,<br>when an unknown printer took a galley of<br>type and scrambled it to make a type ...</p>
+        <div class="hashtags">
+          <p>Physical activity</p>
+          <p>Worldwide</p>
+          <p>Social interactions</p>
         </div>
-        <button class="arrow right-arrow">
-          <img src="/static/img/button-right.png" alt="Right Arrow">
-        </button>
       </div>
     </div>
-    
-  </main>
+  </div>
+
+  <!-- Блок 2 -->
+  <div class="page-container block">
+    <div class="profile-content">
+      <div class="phone-img">
+        <img src="{% static 'img/blockplaywithfriends.png' %}" alt="Friends Image">
+      </div>
+      <div class="main-content">
+        <h2 class="green">FRIENDS</h2>
+        <h1 class="green">Meet with friends and play together!</h1>
+        <p>Discover the secrets and hidden places<br>you never knew existed. Join others in<br>exciting quests for unforgettable experiences...</p>
+        <div class="hashtags">
+          <p>Adventure</p>
+          <p>Teamwork</p>
+          <p>Discovery</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Правая стрелка -->
+  <button class="arrow right-arrow">
+    <img src="{% static 'img/button-right.png' %}" alt="Right Arrow">
+  </button>
+</main>
+
+<script src="{% static 'js/profile.js' %}"></script>
 {% endblock %}
