--- a/main/templates/info_center.html
+++ b/main/templates/info_center.html
@@ -12,24 +12,27 @@
 
 {% block body %}
   <main>
-    <div class="container">
+    <div class="main-container">
       <div class="info">
         <div class="main-content">
-          <span class="sub-title">24 November 2024</span>
+          <span class="sub-title">{{ latest_news.published_date|date:"d F Y" }}</span>
           <p>NEW POST</p>
         </div>
 
         <div class="main-text">
-          <p>We launched «The Quest» website!</p>
+          <p>{{ latest_news.title|safe }}</p>
         </div>
 
         <div class="readmore">
-          <a href="/map">
-            READ MORE
-            <img src="/static/img/right-arrow-icon.svg" alt="Icon" class="right-arrow-icon" />
+          <a href="{% url 'news_detail' latest_news.pk %}">
+              READ MORE
+              <svg class="right-arrow-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M3 12L20.5 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M14 19L21 12L14 5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
           </a>
-        </div>
-        
+      </div>
+      
       </div>
 
       <div class="menu">
@@ -41,10 +44,40 @@
 
     </div>
     <div class="news-events-updates">
-      <div class="content" id="news">This is the NEWS content.</div>
+      <div class="content" id="news">
+        <div class="news-container">
+            {% if news_list %}
+                {% for news in news_list %}
+                    <div class="news-card">
+                        <!-- Изображение для новости -->
+                        <div class="news-image">
+                            <img src="{{  news.news_image.url }}" alt="{{ news.title }}">
+                        </div>
+                        <!-- Блок с фоном -->
+                        <div class="news-content" style="background-image: url('{{ news.content_image.url }}');">
+                            <p class="news-date">{{ news.published_date }}</p>
+                            <h2 class="news-title">{{ news.title|safe }}</h2>
+                            <div class="news-buttons">
+                              <button class="news-button small">
+                                <img src="{% static 'img/icon-share.svg' %}" alt="Share">
+                              </button>                              
+                                <a href="{% url 'news_detail' news.pk %}" class="news-button open">Open</a>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            {% else %}
+                <p>There are no news items available at the moment.</p>
+            {% endif %}
+        </div>
+    </div>
+    
+    </div>
+    
       <div class="content" id="events" style="display: none;">This is the EVENTS content.</div>
       <div class="content" id="updates" style="display: none;">This is the UPDATES content.</div>
-  </div>
+    </div>
+    
   <script src="{% static 'js/info_center.js' %}"></script>
   {% endblock %}
 </main>
