--- a/main/templates/map.html
+++ b/main/templates/map.html
@@ -70,7 +70,7 @@
 
     <div class="privacy-block">
       <a href="/ssse">Job openings</a>
-      <a href="#">Privacy Policy</a>
+      <a href="/privacy-policy">Privacy Policy</a>
     </div>
   </div>
 {% endblock %}
