--- a/main/static/css/info_center.css
+++ b/main/static/css/info_center.css
@@ -1,5 +1,5 @@
 body, html {
-    background: url(/static/img/herosection.png);
+    background: url(/static/img/herosection.png) no-repeat center center/cover;
     margin: 0;
     padding: 0;
     height: 100vh; /* Высота экрана */
