--- a/main/templates/profile.html
+++ b/main/templates/profile.html
@@ -21,12 +21,12 @@
   <div class="page-container block active">
     <div class="profile-content">
       <div class="phone-img">
-        <img src="{% static 'img/BlockPhonewithmap.png' %}" alt="Map Image">
+        <img src="{% static 'img/BlockPhonewithmap.png' %}" alt="Phone displaying map">
       </div>
       <div class="main-content">
         <h2>QUESTS</h2>
         <h1>Quests around the world!</h1>
-        <p>Lorem Ipsum has been the industry's<br>standard dummy text ever since the 1500s,<br>when an unknown printer took a galley of<br>type and scrambled it to make a type ...</p>
+        <p>Lorem Ipsum has been the industry's<br>standard dummy text since the 1500s,<br>when an unknown printer took a galley of<br>type and scrambled it to make a type ...</p>
         <div class="hashtags">
           <p>Physical activity</p>
           <p>Worldwide</p>
@@ -40,7 +40,7 @@
   <div class="page-container block">
     <div class="profile-content">
       <div class="phone-img">
-        <img src="{% static 'img/blockplaywithfriends.png' %}" alt="Friends Image">
+        <img src="{% static 'img/blockplaywithfriends.png' %}" alt="People playing together">
       </div>
       <div class="main-content">
         <h2 class="green">FRIENDS</h2>
