--- a/main/templates/map.html
+++ b/main/templates/map.html
@@ -7,70 +7,60 @@
 {% endblock %}
 
 {% block css %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'css/header.css' %}">
+  <link rel="stylesheet" href="{% static 'css/map.css' %}">
+  <link rel="stylesheet" href="{% static 'css/header.css' %}">
 {% endblock %}
 
 {% block body %}
   <main>
-
-    <div class="centered-content">
+    <section class="centered-content">
       <div class="centered-text">
-          <span class="welcome">Welcome to</span>
-          <h1 class="title">The Quest</h1>
+        <span class="welcome">Welcome to</span>
+        <h1 class="title">The Quest</h1>
       </div>
       <div class="cta-button-container">
-          <button class="get-the-quest get"></button>
+        <button class="get-the-quest get" aria-label="Get The Quest"></button>
       </div>
-  
-      <!-- Модальное окно -->
-      <div id="overlaytwo" class="modal" style="display: none;">
-          <div id="content-block" class="modal-content">
-              <!-- Кнопка закрытия -->
-              <button type="button" id="close-block-two" class="modal-close">
-                  <img src="/static/img/icon-close.png" alt="Close Button" />
-              </button>
-  
-              <!-- Основной текст -->
-              <div id="main-text">
-                <p>COMING SOON . . .</p>
-              </div>
-  
-              <!-- Изображение -->
-              <div id="chill-man">
-                  <img src="/static/img/chill-man.png" alt="Chill Man">
-              </div>
-  
-              <!-- Описание -->
-              <div id="description">
-                  <p>
-                    <b>The game <strong>"The Quest"</strong> is still in development.</b><br>
-                    Subscribe to our <a href="/error_page">social networks</a> to follow the news.<br>
-                  </p>
-              </div>
-  
-              <!-- Прогресс-бар -->
-              <div id="loading">
-                  <div class="progress-bar">
-                      <div class="progress" id="progress" style="width: 0%;"></div>
-                  </div>
-              </div>
+    </section>
+
+    <div id="overlaytwo" class="modal hidden" style="display: none;">
+      <div id="content-block" class="modal-content">
+        <button type="button" id="close-block-two" class="modal-close" aria-label="Close">
+          <img src="/static/img/icon-close.png" alt="Close">
+        </button>
+        <div id="main-text">
+          <p>COMING SOON . . .</p>
+        </div>
+        <div id="chill-man">
+          <img src="/static/img/chill-man.png" alt="Chill Man">
+        </div>
+        <div id="description">
+          <p>
+            <b>The game <strong>"The Quest"</strong> is still in development.</b><br>
+            Subscribe to our <a href="/error_page">social networks</a> to follow the news.<br>
+          </p>
+        </div>
+        <div id="loading">
+          <div class="progress-bar">
+            <div class="progress" id="progress"></div>
           </div>
+        </div>
       </div>
-  </div>
-  
-    
+    </div>
   </main>
 
-  <div class="privacy-policy">
+  <footer class="privacy-policy">
     <div class="fixed-text-block">
       <p class="first-text">The Quest - it's just a game.</p>
-      <p class="second-text">For investment inquiries, <a href="/map">please reach out</a> to us.</p>
+      <p class="second-text">
+        For investment inquiries, <a href="/map">please reach out</a> to us.
+      </p>
     </div>
-
     <div class="privacy-block">
       <a href="/ssse">Job openings</a>
       <a href="/privacy_policy">Privacy Policy</a>
     </div>
-  </div>
+  </footer>
 {% endblock %}
+
+
