--- a/main/templates/map.html
+++ b/main/templates/map.html
@@ -61,6 +61,8 @@
       <a href="/privacy_policy">Privacy Policy</a>
     </div>
   </footer>
+<script src="{% static 'js/script.js' %}"></script>
+<script src="{% static 'js/progress-bar.js' %}"></script>
 {% endblock %}
 
 
